# aoc-2022

./: Cargo.toml
artifacts/day01/: run_2022-11-30_21-58-37.csv  run_2022-11-30_22-08-39.csv  run_2022-11-30_22-10-51.csv  run_2022-11-30_23-25-51.csv
artifacts/day02/: run_2022-12-01_21-36-09.csv  run_2022-12-01_21-49-51.csv  run_2022-12-01_21-50-22.csv  run_2022-12-01_22-04-32.csv  run_2022-12-01_22-18-45.csv
artifacts/day03/: run_2022-12-02_21-34-43.csv  run_2022-12-02_22-01-58.csv  run_2022-12-03_10-16-08.csv  run_2022-12-03_10-16-29.csv  run_2022-12-03_10-16-43.csv  run_2022-12-03_10-22-02.csv  run_2022-12-04_09-19-20.csv  run_2022-12-04_09-26-43.csv
artifacts/day04/: run_2022-12-04_09-47-24.csv  run_2022-12-04_09-56-59.csv  run_2022-12-04_10-05-52.csv
artifacts/day05/: run_2022-12-04_22-42-25.csv  run_2022-12-04_22-45-30.csv  run_2022-12-04_23-09-25.csv  run_2022-12-04_23-32-48.csv  run_2022-12-04_23-34-30.csv  run_2022-12-05_08-37-18.csv
artifacts/day06/: run_2022-12-05_21-26-47.csv  run_2022-12-05_21-33-58.csv  run_2022-12-05_21-35-04.csv
artifacts/day07/: run_2022-12-10_14-52-05.csv  run_2022-12-10_15-04-37.csv  run_2022-12-10_15-34-33.csv  run_2022-12-10_15-35-18.csv  run_2022-12-10_16-53-05.csv
artifacts/day08/: run_2022-12-11_07-18-39.csv  run_2022-12-11_07-26-33.csv  run_2022-12-11_07-36-15.csv  run_2022-12-11_07-36-30.csv  run_2022-12-11_16-06-50.csv  run_2022-12-12_18-42-35.csv  run_2022-12-12_18-43-18.csv  run_2022-12-12_18-43-32.csv
artifacts/day09/: run_2022-12-12_21-11-13.csv  run_2022-12-12_21-40-43.csv  (+1 more)
src/: main.rs
src/day01/: mod.rs  (+2 more)
(+78 files in other folders)
