[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"

[features]
# default = [
#     "day01",
#     "day02",
#     "day03",
#     "day04",
#     "day05",
#     "day06",
#     "day07",
#     "day08",
#     "day09",
#     "day10",
#     "day11",
#     "day12",
#     "day13",
#     "day14",
#     "day15",
#     "day16",
# ]
default = ["day12"]
day01 = []
day02 = []
day03 = []
day04 = []
day05 = []
day06 = []
day07 = []
day08 = []
day09 = []
day10 = []
day11 = []
day12 = []
day13 = []
day14 = []
day15 = []
day16 = []
